# mmdetection

./: pixi.toml  pyproject.toml
configs/mm_grounding_dino/: grounding_dino_swin-t_finetune_f30k_jcre3_ja.py  grounding_dino_swin-t_finetune_goldg_ja.py
configs/mm_grounding_dino/flickr30k/: grounding_dino_swin-t-finetune_flickr30k-ja.py
demo/: run_gdino.py
mmdet/evaluation/metrics/: flickr30k_metric.py
mmdet/models/language_models/: __init__.py  mdeberta.py  utils.py
mmdet/utils/: util_prediction.py
mmdet/visualization/: local_visualizer.py
